--- a/contact.html
+++ b/contact.html
@@ -117,20 +117,23 @@
                                 <a href="service.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Servicios</a>
                                 <a href="contact.html" class="nav-item nav-link active"><i class="fas fa-leaf nav-icon"></i> Contacto</a>
                             </div>-->
-                                                        <div class="navbar-nav mr-auto">
-    <a href="index.html" class="nav-item nav-link active">
-        <span class="nav-dot"></span> Inicio
-    </a>
-    <a href="about.html" class="nav-item nav-link">
-        <span class="nav-dot"></span> Nosotros
-    </a>
-    <a href="service.html" class="nav-item nav-link">
-        <span class="nav-dot"></span> Servicios
-    </a>
-    <a href="contact.html" class="nav-item nav-link">
-        <span class="nav-dot"></span> Contacto
-    </a>
-</div>
+                            <div class="navbar-nav mr-auto">
+                                <a href="index.html" class="nav-item nav-link active">
+                                    <span class="nav-dot"></span> Inicio
+                                </a>
+                                <a href="about.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Nosotros
+                                </a>
+                                <a href="service.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Servicios
+                                </a>
+                                <a href="portfolio.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Proyectos
+                                </a>
+                                <a href="contact.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Contacto
+                                </a>
+                            </div>
                             <!--<div class="ml-auto">
                                 <a class="btn" href="#">Get A Quote</a>
                             </div>-->
@@ -286,45 +289,30 @@
                                 <a href="about.html">Nosotros</a>
                                 <a href="service.html">Servicios</a>
                                 <a href="contact.html">Contacto</a>
-                                <!--<a href="">Proyectos</a>
-                                <a href="">Servicios</a>-->
+                                <a href="portfolio.html">Proyectos</a>
                             </div>
                         </div>
-                        <!--<div class="col-md-6 col-lg-3">
-                            <div class="newsletter">
-                                <h2>Hoja informativa</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu
-                                </p>
-                                <div class="form">
-                                    <input class="form-control" placeholder="Email here">
-                                    <button class="btn">Submit</button>
-                                </div>
-                            </div>
-                        </div>-->
-                    </div>
-                </div>
-                <!--<div class="container footer-menu">
-                    <div class="f-menu">
-                        <a href="">Terms of use</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
-                    </div>
-                </div>
-                <div class="container copyright">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>&copy; <a href="#">Mundo Grass Perú - Diseño e instalación</a>, Todos los derechos reservados.</p>
+
+                        <div class="col-md-6 col-lg-3">
+        <div class="footer-contact-form">
+          <h2>Envíanos un mensaje</h2>
+          <form action="https://formsubmit.co/flavio.gonzaleslopez95@gmail.com" method="POST">
+            <input type="text" name="name" placeholder="Tu nombre" required>
+            <input type="email" name="email" placeholder="Tu correo" required>
+            <textarea name="message" placeholder="Tu mensaje" required></textarea>
+
+            <!-- Opcional: sin captcha -->
+            <input type="hidden" name="_captcha" value="false">
+
+            <!-- Opcional: redirigir a una página de gracias -->
+            <!-- <input type="hidden" name="_next" value="https://tuweb.com/gracias.html"> -->
+
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+      </div>
                         </div>
-                        <div class="col-md-6">
-                            <p>Diseñado por <a href="https://www.linkedin.com/in/flavio-luis-gonz%C3%A1les-l%C3%B3pez-a44a7319a/?lipi=urn%3Ali%3Apage%3Ad_flagship3_people%3BqgASOnOfRAerBUYACDeXMQ%3D%3D" target="_blank">HTML FGONZALES</a></p>
-                        </div>
-                    </div>
                 </div>
-            </div>
-            <!-- Footer End -->
 </div>
             <!-- Botón WhatsApp -->
 <!-- WhatsApp debe ir DESPUÉS para asegurar que quede arriba -->
