--- a/portfolio.html
+++ b/portfolio.html
@@ -168,6 +168,9 @@
                         <!--<li data-filter="*" class="filter-active">All</li>-->
                         <li data-filter=".first" class="filter-active">Lucas-y-Lucy NOLT INGENIERROS</li>
                         <li data-filter=".second">PROYECTO FLOW - EMPRESA LIDER</li>
+                        <li data-filter=".third">PROYECTO ALBAMAR</li>
+                        <li data-filter=".four">PROYECTO CASA PARQUE 1 - EMPRESA LIDER</li>
+                        <li data-filter=".five">EMPRESA DEPOSITOS QUIMICOS</li>
                         <!--<li data-filter=".third">Upcoming</li>-->
                         </ul>
                     </div>
@@ -179,9 +182,9 @@
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
                             <img src="img/proyecto1.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <!--<div class="portfolio-overlay">
                             <p>texto....</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
                             <h3>NOLT INGEMIEROS</h3>
@@ -194,9 +197,9 @@
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
                             <img src="img/proyecto1_1.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <!--<div class="portfolio-overlay">
                             <p>texto....</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
                             <h3>NOLT INGEMIEROS</h3>
@@ -209,9 +212,9 @@
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
                             <img src="img/proyecto1_2.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <!--<div class="portfolio-overlay">
                             <p>texto....</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
                             <h3>NOLT INGEMIEROS</h3>
@@ -223,38 +226,53 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
                     </div>
 
-<div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
-  <div class="portfolio-warp">
-    <div class="portfolio-img">
-      <!-- Video muestra su primer frame -->
-      <video class="video-thumb"
-             muted
-             playsinline
-             preload="metadata"
-             style="width: 100%; height: 500px; object-fit: cover;">
-        <source src="img/video1.mp4" type="video/mp4">
-        Tu navegador no soporta video.
-      </video>
-      <div class="portfolio-overlay"></div>
-    </div>
-    <div class="portfoliovideo-text">
-      <h3>NOLT INGENIEROS</h3>
-      <!-- Botón de reproducción -->
-      <a class="btn play-btn" href="#"><i class="fas fa-play"></i></a>
-    </div>
-  </div>
-</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
+                    <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                        <!-- Video muestra su primer frame -->
+                        <video class="video-thumb"
+                                muted
+                                playsinline
+                                preload="metadata"
+                                style="width: 100%; height: 500px; object-fit: cover;">
+                            <source src="img/video1.mp4" type="video/mp4">
+                            Tu navegador no soporta video.
+                        </video>
+                        <div class="portfolio-overlay"></div>
+                        </div>
+                        <div class="portfoliovideo-text">
+                        <h3>NOLT INGENIEROS</h3>
+                        <!-- Botón de reproducción -->
+                        <a class="btn play-btn" href="#"><i class="fas fa-play"></i></a>
+                        </div>
+                    </div>
+                    </div>
 
 
 
                     <!-- SECOND -->
+                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto2_3.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non.</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>EMPRESA LIDER</h3>
+                            <a class="btn" href="img/proyecto2_3.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
                             <img src="img/proyecto2.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <!--<div class="portfolio-overlay">
                             <p>Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non.</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
                             <h3>EMPRESA LIDER</h3>
@@ -267,9 +285,9 @@
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
                             <img src="img/proyecto2_1.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <!--<div class="portfolio-overlay">
                             <p>Texto...</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
                             <h3>EMPRESA LIDER</h3>
@@ -281,10 +299,25 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
-                            <img src="img/proyecto2_2.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <img src="img/proyecto2_4.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
                             <p>Texto...</p>
-                            </div>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>EMPRESA LIDER</h3>
+                            <a class="btn" href="img/proyecto2_4.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto2_2.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
                             <h3>EMPRESA LIDER</h3>
@@ -293,18 +326,33 @@
                         </div>
                     </div>
 
-                    <!-- THIRD -->
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
-                            <img src="img/portfolio-3.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <img src="img/proyecto2_5.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
                             <p>Texto...</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
-                            <h3>Proyecto Upcoming 1</h3>
-                            <a class="btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">+</a>
+                            <h3>EMPRESA LIDER</h3>
+                            <a class="btn" href="img/proyecto2_5.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <!-- THIRD -->
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item third">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto3.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Inmobiliario Albamar</h3>
+                            <a class="btn" href="img/proyecto3.jpg" data-lightbox="portfolio">+</a>
                         </div>
                         </div>
                     </div>
@@ -312,14 +360,159 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
                         <div class="portfolio-warp">
                         <div class="portfolio-img">
-                            <img src="img/portfolio-6.jpg" alt="Image">
-                            <div class="portfolio-overlay">
+                            <img src="img/proyecto3_1.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
                             <p>Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non.</p>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="portfolio-text">
-                            <h3>Proyecto Upcoming 2</h3>
-                            <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                            <h3>Inmobiliario Albamar</h3>
+                            <a class="btn" href="img/proyecto3_1.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto3_2.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non.</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Inmobiliario Albamar</h3>
+                            <a class="btn" href="img/proyecto3_2.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+                    
+
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto3_3.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non.</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Inmobiliario Albamar</h3>
+                            <a class="btn" href="img/proyecto3_3.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto3_4.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non.</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Inmobiliario Albamar</h3>
+                            <a class="btn" href="img/proyecto3_4.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+
+
+                    <!-- FOUR -->
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item four">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto4.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Empresa Lider</h3>
+                            <a class="btn" href="img/proyecto4.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item four">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto4_1.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Empresa Lider</h3>
+                            <a class="btn" href="img/proyecto4_1.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item four">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto4_2.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Empresa Lider</h3>
+                            <a class="btn" href="img/proyecto4_2.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+
+
+                    <!-- FIVE -->
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item five">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto5.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Empresa de Quimicos</h3>
+                            <a class="btn" href="img/proyecto5.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item five">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto5_1.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Empresa de Quimicos</h3>
+                            <a class="btn" href="img/proyecto5_1.jpg" data-lightbox="portfolio">+</a>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-12 portfolio-item five">
+                        <div class="portfolio-warp">
+                        <div class="portfolio-img">
+                            <img src="img/proyecto5_2.jpg" alt="Image">
+                            <!--<div class="portfolio-overlay">
+                            <p>Texto...</p>
+                            </div>-->
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Empresa de Quimicos</h3>
+                            <a class="btn" href="img/proyecto5_2.jpg" data-lightbox="portfolio">+</a>
                         </div>
                         </div>
                     </div>
